--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,33 @@
 ---
 layout: default
 ---
+
 <div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
+  {{ content }}
 </div>
+   
+
+<!-- <div class="related"> -->
+<!--   <h2>Related Posts</h2> -->
+<!--   <ul class="related-posts"> -->
+<!--     {% for post in site.related_posts limit:3 %} -->
+<!--       <li> -->
+<!--         <h3> -->
+<!--           <a href="{{ post.url }}"> -->
+<!--             {{ post.title }} -->
+<!--             <small>{{ post.date | date_to_string }}</small> -->
+<!--           </a> -->
+<!--         </h3> -->
+<!--       </li> -->
+<!--     {% endfor %} -->
+<!--   </ul> -->
+<!-- </div> -->
+
+<div class="tags">
+Tagged as: <i class="icon-tags"></i> {% for tag in page.tags %} <a href="/archive#{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</u></a>  {% if forloop.last != true %} {% endif %} {% endfor %}
+<!-- The icon-tags class is a twitter bootstrap class, so probably not needed here, but to have the tage listed would be nice... -->
+</div>
+
+{% include comments.html %}
