--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,4 +38,9 @@
 
 </script>
 
+<!-- Load mathjax -->
+<script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
 </head>
