Update to post.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,4 +30,11 @@ Tagged as: <i class="icon-tags"></i> {% for tag in page.tags %} <a href="/archiv
 <!-- The icon-tags class is a twitter bootstrap class, so probably not needed here, but to have the tage listed would be nice... -->
 </div>
 
+<div class="social">
+<a href="https://twitter.com/share" class="twitter-share-button" data-via="stephenelane">Tweet</a>
+
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-annotation="inline" data-width="300"></div>
+</div>
+
 {% include comments.html %}
