--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,9 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
+  {% if page.subtitle != null %}
+  <h2 class="post-title">{{ page.subtitle }}</h2>
+  {% endif %}
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
