--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
 		  <!-- active class has the link highlighted -->
 		  <!-- <li class="active"> -->
 		  <li>
-		    <a href="{{ site.baseurl }}blog/archive/">Blog archive</a>
+		    <a href="{{ site.baseurl }}blog/archive">Blog archive</a>
 		  </li>
 		</ul>
 	      </li>
