--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <!-- Ah, the favicon.
     ================================================== -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
     Twitter: https://dev.twitter.com/docs/cards/types/summary-card
@@ -148,7 +148,8 @@
         
 
         <footer class="site-footer row" role="contentinfo">
-        <hr/>
+          <hr/>
+	  {% include isblog.html %}
           <div class="large-12 columns">
             <ul class="inline-list">
                 {% include nav.html %}
