Update blog layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,6 +150,7 @@
         <footer class="site-footer row" role="contentinfo">
           <hr/>
 	  {% include isblog.html %}
+	  <div class="row">
           <div class="large-12 columns">
             <ul class="inline-list">
                 {% include nav.html %}
@@ -162,6 +163,7 @@
                 </i>
              @{{ site.github }}</a> {{ site.year }}.</p>
           </div>
+	  </div>
         </footer>
 
 
