--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -156,12 +156,13 @@
                 {% include nav.html %}
             </ul>
             <p class="quiet copyright right"> <a href="https://twitter.com/{{ site.twitter }}">
+		<i class="fa fa-copyright"></i>
                 <i class="fa fa-twitter">
                 </i>
              @{{ site.twitter }}</a>, <a href="https://github.com/{{ site.github }}/">
                 <i class="fa fa-github">
                 </i>
-             @{{ site.github }}</a> {{ site.year }}.</p>
+             @{{ site.github }}</a> {{ site.year }}. Licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.</p>
           </div>
 	  </div>
         </footer>
