Update notebook link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
 	      @{{ site.github }}</a>
 	  </li>
 	  <li class="has-submenu">
-	    <a href="{{ site.url }}/notebooks/">Research notebooks</a>
+	    <a href="{{ site.url }}/notebooks">Research notebooks</a>
 	    <ul class="submenu menu vertical" data-submenu>
 	      <li>
 		<a href="{{ site.url }}/notes2016/">2016</a>
