Back to using github.io

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,10 +68,10 @@
 	      @{{ site.github }}</a>
 	  </li>
 	  <li class="has-submenu">
-	    <a href="{{ site.url }}/notebooks">Research notebooks</a>
+	    <a href="{{ site.baseurl }}notebooks">Research notebooks</a>
 	    <ul class="submenu menu vertical" data-submenu>
 	      <li>
-		<a href="{{ site.url }}/notes2016/">2016</a>
+		<a href="{{ site.baseurl }}notes2016/">2016</a>
 	      </li>
 	    </ul>
 	  </li>
