--- a/css/app.css
+++ b/css/app.css
@@ -517,7 +517,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Exo", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -1352,7 +1352,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Exo", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: inherit;
