Changes to styling.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ site.baseurl }}css/app.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}css/solarized-light.css" />
 
     <!-- CSS for github widget -->
     <link rel="stylesheet" href="{{ site.baseurl }}css/github-activity-0.1.4.min.css">
