--- a/scss/_syntax-highlighting.scss
+++ b/scss/_syntax-highlighting.scss
@@ -2,4 +2,4 @@
  * Syntax highlighting (add nicer box)
  */
 
-pre{background-color:#fdf6e3;padding:1.2em;box-shadow:0 0 1em #F78536;-webkit-box-shadow:0 0 1em #F78536;-moz-box-shadow:0 0 1em #F78536;-webkit-border-radius:5px;-moz-border-radius:5px;overflow:auto}
+pre{background-color:#fdf6e3;margin:1.0em;padding:1.2em;box-shadow:0 0 1em #F78536;-webkit-box-shadow:0 0 1em #F78536;-moz-box-shadow:0 0 1em #F78536;-webkit-border-radius:5px;-moz-border-radius:5px;overflow:auto}
