--- a/scss/app.scss
+++ b/scss/app.scss
@@ -2,7 +2,7 @@
 
 @import 'settings';
 // Add in custom to overide code styling
-@import 'custom-code';
+// @import 'custom-code';
 @import 'foundation';
 @import 'motion-ui';
 
