--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -57,6 +57,8 @@ $foundation-palette: (
   alert: #ec5840,
 );
 $light-gray: #2b4450;
+$solarized-light: #fdf6e3;
+$solarized-dark: #002b36;
 //$light-gray: #125069;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
@@ -138,8 +140,8 @@ $paragraph-text-rendering: optimizeLegibility;
 $code-color: $black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
-$code-background: $light-gray;
-$code-border: 1px solid $medium-gray;
+$code-background: $solarized-light;
+$code-border: 1px solid $solarized-light;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $primary-color;
 $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
