--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,17 +11,17 @@
     <!-- CSS  Get: http://www.google.com/fonts/
     http://stackoverflow.com/questions/7985081/how-to-deploy-a-jekyll-site-locally-with-css-js-and-background-images-included
     ================================================== -->
-    <link href="//fonts.googleapis.com/css?family=Titillium+Web:400,200,700|Raleway:400,200,700|Open+Sans:400,300,700|Exo:400,200,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,200,700|Raleway:400,200,700|Open+Sans:400,300,700|Exo:400,200,700" rel="stylesheet" type="text/css">
     <!-- Fount Awesome -->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ site.baseurl }}css/app.css" />
     <link rel="stylesheet" href="{{ site.baseurl }}css/solarized-light.css" />
 
     <!-- CSS for github widget -->
     <link rel="stylesheet" href="{{ site.baseurl }}css/github-activity-0.1.4.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 
 
     <!-- Open Graph: https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/
@@ -122,7 +122,7 @@
               @{{ site.twitter }}</a>, <a href="https://github.com/{{ site.github }}/">
               <i class="fa fa-github">
               </i>
-              @{{ site.github }}</a> {{ site.year }}. Licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+              @{{ site.github }}</a> {{ site.year }}. Licensed <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
         </div>
       </div>
     </footer>
@@ -132,7 +132,7 @@
     ================================================== -->
     <!-- Zepto (http://zeptojs.com/) is great, but I am sticking with jQuery. Sorry! -->
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ site.baseurl }}bower_components/jquery/dist/jquery.js"><\/script>')</script>
     <script src="{{ site.baseurl }}bower_components/foundation-sites/dist/foundation.js"></script>
 
