--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
     <!-- Fount Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}css/app.css" />
-    <link rel="stylesheet" href="{{ site.baseurl }}css/solarized-light.css" />
+    <link rel="stylesheet" href="{{ site.url }}css/app.css" />
+    <link rel="stylesheet" href="{{ site.url }}css/solarized-light.css" />
 
     <!-- CSS for github widget -->
-    <link rel="stylesheet" href="{{ site.baseurl }}css/github-activity-0.1.4.min.css">
+    <link rel="stylesheet" href="{{ site.url }}css/github-activity-0.1.4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 
@@ -44,7 +44,7 @@
     <!-- <script src="{{ site.baseurl }}bower_components/modernizr/modernizr.js"></script> -->
 
     <!-- Github activity script -->
-    <script type="text/javascript" src="{{ site.baseurl }}js/github-activity-0.1.4.min.js"></script>
+    <script type="text/javascript" src="{{ site.url }}js/github-activity-0.1.4.min.js"></script>
 
     <!-- Add mathjax -->
     <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
