--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,21 +73,21 @@
 	      @{{ site.github }}</a>
 	  </li>
 	  <li class="has-submenu">
-	    <a href="{{ site.baseurl }}notebooks">Research notebooks</a>
+	    <a href="{{ site.url }}notebooks">Research notebooks</a>
 	    <ul class="submenu menu vertical" data-submenu>
 	      <li>
-		<a href="{{ site.baseurl }}notes2016/">2016</a>
+		<a href="{{ site.url }}notes2016/">2016</a>
 	      </li>
 	    </ul>
 	  </li>
 	  <li class="has-submenu">
-	    <a href="{{ site.baseurl }}blog/">Blog</a>
+	    <a href="{{ site.url }}blog/">Blog</a>
 	    <ul class="submenu menu vertical" data-submenu>
 	      <li>
-		<a href="{{ site.baseurl }}blog/">Latest blog posts</a>
+		<a href="{{ site.url }}blog/">Latest blog posts</a>
 	      </li>
 	      <li>
-		<a href="{{ site.baseurl }}blog/archive">Blog archive</a>
+		<a href="{{ site.url }}blog/archive">Blog archive</a>
 	      </li>
 	    </ul>
 	  </li>
@@ -133,11 +133,11 @@
     <!-- Zepto (http://zeptojs.com/) is great, but I am sticking with jQuery. Sorry! -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{ site.baseurl }}bower_components/jquery/dist/jquery.js"><\/script>')</script>
-    <script src="{{ site.baseurl }}bower_components/foundation-sites/dist/foundation.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ site.url }}bower_components/jquery/dist/jquery.js"><\/script>')</script>
+    <script src="{{ site.url }}bower_components/foundation-sites/dist/foundation.js"></script>
 
-    <script src="{{ site.baseurl }}bower_components/what-input/what-input.js"></script>
-    <script src="{{ site.baseurl }}js/app.js"></script>
+    <script src="{{ site.url }}bower_components/what-input/what-input.js"></script>
+    <script src="{{ site.url }}js/app.js"></script>
 
     <!-- Google Analytics -->
     <script>
